# ssync

./: .config.yaml.swp  .coverage  .gitignore  ARRAY_JOB_CACHE_IMPLEMENTATION.md  ARRAY_JOB_SUPPORT.md  CACHE_DISCREPANCIES_ANALYSIS.md  CLAUDE.md  CONTEXT.md  JOB_REFRESH_IMPROVEMENTS.md  JOB_SELECTION_TABS_FEATURE.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  REFRESH_UI_IMPROVEMENTS.md  SSH_BACKEND_ROLLBACK.md  STATIC_WATCHERS_FEATURE.md  STATIC_WATCHER_STATE_FIX.md  STATIC_WATCHER_TRIGGER_FIX.md  STATIC_WATCHER_UI_COMPLETE.md  TESTING.md  TESTING_IMPLEMENTATION_SUMMARY.md  TESTING_REALITY_CHECK.md  TEST_RECOMMENDATIONS.md  TIMER_MODE_MANUAL_TRIGGER.md  WATCHERS.md  WATCHERS_COMPLETE_ANALYSIS.md  WATCHERS_DEEP_DIVE.md  WATCHERS_QUICKSTART.md  WATCHER_MULTI_SELECT_FEATURE.md  WATCHER_STATUS_GUIDE.md  WATCHER_UV_EXAMPLES.md  WEBSOCKET_UPDATES_FIX.md  cleanup_cache_by_user.py  config.example.yaml  coverage.xml  diagnose_duplicates.py  fix_corrupted_cache.py  monitor_watcher.py  plan.md  pyproject.toml  pytest.ini  (+8 more)
.claude/: settings.local.json
docs/: raycast-extension-plan.md  recipes.md  watcher-resubmit.md  watchers.md
ios-app/: ENHANCED_FEATURES.md  README.md  setup_xcode_project.sh
mobile-app/: App.tsx  app.json  eas.json  jest.setup.ts  package-lock.json  package.json  tsconfig.json
notebooks/: submitit.ipynb
raycast-extension/: package-lock.json  package.json  raycast-env.d.ts  tsconfig.json
tests/: conftest.py  submit_test.py.manual  test_abort_on_failure.sh  test_abort_success.sh  test_adastra.py.backup  test_compression.py.manual  test_compression_simple.py.manual  test_manual_trigger.py.manual  (+11 more)
(+528 files in other folders)
